Fix Bugs, Cleanup codes